# CoppeliaSim-Quadrocopter

./: .gitignore  README.md  pyproject.toml
scene/: challenge_scenario.ttt
src/: .env.template  main.py
src/core/: config.py  sim_helper.py
src/quadrocopter/: quadrocopter.py  sonar_sensor.py  target_control.py  vision_sensor.py
src/util/: sim.py
