[project]
name = "quadrocopter"
version = "0.1.0"
description = ""
authors = [
    {name = "VadimBarinov",email = "barinovvadim87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "coppeliasim-zmqremoteapi-client (>=2.0.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_quadrocopter = "src.main:main"
